RESOLVED FIXED184832
Include missing files in WKContentViewInteraction.{mm,h}
https://bugs.webkit.org/show_bug.cgi?id=184832
Summary Include missing files in WKContentViewInteraction.{mm,h}
Timothy Hatcher
Reported 2018-04-20 11:23:51 PDT
Some internal files are missing here.
Attachments
Patch (4.81 KB, patch)
2018-04-20 11:27 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2018-04-20 11:27:05 PDT
Wenson Hsieh
Comment 2 2018-04-20 12:17:29 PDT
Comment on attachment 338442 [details] Patch r=me! This...might (?) require a WK2 owner stamp.
Tim Horton
Comment 3 2018-04-20 12:38:32 PDT
wk2r=me
WebKit Commit Bot
Comment 4 2018-04-20 14:01:44 PDT
Comment on attachment 338442 [details] Patch Clearing flags on attachment: 338442 Committed r230854: <https://trac.webkit.org/changeset/230854>
WebKit Commit Bot
Comment 5 2018-04-20 14:01:45 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-04-20 14:02:21 PDT
Note You need to log in before you can comment on or make changes to this bug.