Include missing files in WKContentViewInteraction.{mm,h}

https://bugs.webkit.org/show_bug.cgi?id=184832
rdar://problem/35377120

Reviewed by Wenson Hsieh.

Some WebDriver files were missing and should be included.

* UIProcess/ios/WKContentViewInteraction.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView setupInteraction]):
(-[WKContentView cleanupInteraction]):
(-[WKContentView _removeDefaultGestureRecognizers]):
(-[WKContentView _addDefaultGestureRecognizers]):


Canonical link: https://commits.webkit.org/200330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230854 268f45cc-cd09-0410-ab3c-d52691b4dbfc